--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,8 @@ url: "https://boolghosts.github.io/" # the base hostname & protocol for your sit
 github_username:  boolGhosts
 
 # Build settings
-theme: minima
+#theme: minima
+remote-theme: no-style-please
 plugins:
   - jekyll-feed
 
